config-root/namespaces/jx-production/node-hello/node-hello-ingress.yaml
# Source: node-hello/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: node-hello
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: node-hello
              servicePort: 80
      host: node-hello-jx-production.35.184.128.47.nip.io
